fix: сверстать меню

--- a/index.css
+++ b/index.css
@@ -20,7 +20,7 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 30px 250px 73px 210px
+    padding: 30px 250px 67px 210px
 } 
 
 .logo{
@@ -50,3 +50,64 @@
 
 }
 
+.menu{
+    list-style: none;
+    padding: 0;
+    margin: 0;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: rgb(119, 119, 119);
+    height: 80px;
+}
+
+.menu__list {
+    font-size: 30px;
+    font-family: "PT Sans";
+    color: rgb(255, 255, 255);
+    line-height: 30px;
+    text-align: center;
+    font-weight: normal;
+    letter-spacing: 0.5px;
+    cursor: pointer;
+}
+
+.menu__line{
+    width: 3px;
+    height: 24px;
+    background-color: rgb(255, 255, 255);
+    margin: 0px 21px;
+}
+
+.menu__list:hover{
+    border-bottom: 2px solid rgb(255, 255, 255);
+    line-height: 28px;
+}
+
+
+.Главная_____Каталог_____Доставка_и_оплата____Пр {
+    font-size: 30px;
+    font-family: "PT Sans";
+    color: rgb(255, 255, 255);
+    line-height: 1.2;
+    text-align: center;
+    position: absolute;
+    left: 209.558px;
+    top: 251.5px;
+    width: 902px;
+    height: 27px;
+    z-index: 66;
+  }
+
+  .Слой_3 {
+    background-image: url("Слой 3.png");
+    position: absolute;
+    left: 0px;
+    top: 230px;
+    width: 1400px;
+    height: 80px;
+    z-index: 65;
+  }
+  
+  
+  
