--- a/index.css
+++ b/index.css
@@ -7,7 +7,7 @@
     color: rgb(118, 118, 118);
     background-color: #FFFFFF;
     margin: 0 auto;
-    max-width: 1440px;
+    max-width: 1400px;
     -moz-osx-font-smoothing: grayscale;
     -webkit-font-smoothing: antialiased;
     -webkit-text-size-adjust: 100%;
@@ -84,30 +84,262 @@
     line-height: 28px;
 }
 
+.slider{
+    display: flex;
+    flex-direction: column;
+    position: relative;
+    height: 400px;
+    background-color: rgb(248, 248, 248);
+}
 
-.Главная_____Каталог_____Доставка_и_оплата____Пр {
+
+.slider__container{
+    display: flex;
+    width: 100%;
+    align-items: flex-end;
+    overflow: hidden;    
+}
+
+.slider__image{
+    margin: 0 auto;
+}
+
+.slider__buttons {
+    display: flex;
+    justify-content: space-between;
+    width: 68%;
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%,-50%);
+}
+
+.slider__button-right{
+    background-image: url("./images/right.png");
+    width: 34px;
+    height: 61px;
+    border:none;
+}
+
+.slider__button-left{
+    background-image: url("./images/left.png");
+    width: 34px;
+    height: 61px;
+    border:none;
+}
+
+.catalog{
+    margin: 0 auto;
+    padding: 8px 200px 187px 200px;
+}
+
+.catalog__container {
+    display: flex;
+}
+
+.breadcrumbs__link {
+    font-size: 14px;
+    font-family: "PT Sans";
+    color: rgb(118, 118, 118);
+    line-height: 1.286;
+  }
+  .catalogtree__firstlevel-link {
+    font-family: "PT Sans";
+    color: rgb(118, 118, 118);
+    line-height: 1.286;
+  }
+  
+  .catalogtree__secondlevel-link {
+    font-size: 14px;
+    font-family: "PT Sans";
+    color: rgb(118, 118, 118);
+    line-height: 1.286;
+  }
+  
+  .breadcrumbs__text {
+    font-size: 14px;
+    font-family: "PT Sans";
+    color: rgb(118, 118, 118);
+    line-height: 1.286;
+  }
+
+.catalog__left {
+    display: flex;
+    flex-direction: column;
+}
+
+.tree__firstlevel_item {
+    font-size: 18px;
+    font-family: "PT Sans";
+    color: rgb(118, 118, 118);
+    line-height: 1.667;
+    margin-bottom: 2px;
+    white-space: nowrap;
+}
+
+.tree__firstlevel_list {
+    list-style-type: none;
+    padding: 0;
+}
+
+.tree__secondlevel_list {
+    list-style-type: none;
+    padding: 0 0 0 10px;
+}
+
+.tree__secondlevel_item {
+    font-size: 14px;
+    font-family: "PT Sans";
+    color: rgb(118, 118, 118);
+    line-height: 1.286;
+    margin-bottom: 3px;
+    white-space: nowrap;
+}
+
+.tree__secondlevel_item:before {
+    content: "\2022";
+    margin: 0 5px 0 0;
+}
+
+.catalog__right {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 24px 0 0 30px;
+}
+
+.catalog__list {
+    display: flex;
+    flex-wrap: wrap;
+}
+
+.widget {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-top: 83px;
+}
+
+.widget__icon {
+    width: 100px;
+}
+
+.widget__title {
     font-size: 30px;
     font-family: "PT Sans";
-    color: rgb(255, 255, 255);
-    line-height: 1.2;
+    color: rgb(68, 68, 68);
+    font-weight: bold;
+    line-height: 0.833;
     text-align: center;
-    position: absolute;
-    left: 209.558px;
-    top: 251.5px;
-    width: 902px;
-    height: 27px;
-    z-index: 66;
+    margin-top: 0;
+}
+
+.card {
+    width: 210px;
+    height: 340px;
+    background-color: aqua;
+    padding: 20px;
+    margin-right: 15px;
+    margin-bottom: 15px;
+    background-image: url("images/card_bg.png");
+}
+  
+.card__image {
+    width: 210px;
+    height: 210px;
+    object-fit: cover;
+}
+
+.card__title {
+    font-size: 18px;
+    font-family: "PT Sans";
+    color: rgb(118, 118, 118);
+    line-height: 1;
+    text-align: left;
+    margin-top: 14px;
+}
+
+.card__price {
+    font-size: 28px;
+    font-family: "PT Sans";
+    color: rgb(68, 68, 68);
+    font-weight: bold;
+    line-height: 0.643;
+    text-align: left;
+    margin-top: 57px;
+}
+
+.page__indicator {
+    font-size: 14px;
+    font-family: "PT Sans";
+    color: rgb(118, 118, 118);
+    line-height: 1.571;
+    text-align: center;
+    margin-right: 15px;
+}
+
+.catalog__pagination {
+    margin-top: 10px;
+}
+
+.page__indicator_active {
+    font-size: 17px;
+}
+
+.about {
+    border-top: rgb(118, 118, 118) 1px solid;
+    width: 100%;
+    margin-top: 64px;
+    display: flex;
+    padding-top: 7px;
+    justify-content: space-between;
+    margin-right: 30px;
+}
+
+.about__text {
+    width: 370px;
+    font-size: 14px;
+    font-family: "PT Sans";
+    color: rgb(118, 118, 118);
+    line-height: 1.571;
+    text-align: left;
   }
 
-  .Слой_3 {
-    background-image: url("Слой 3.png");
-    position: absolute;
-    left: 0px;
-    top: 230px;
-    width: 1400px;
-    height: 80px;
-    z-index: 65;
+  .footer {
+      display: flex;
+      justify-content: space-between;
+      background-color: rgb(118, 118, 118);
+      padding: 44px 200px 70px 200px;
+  }
+
+  .footer__text {
+    margin: 0;
+    font-size: 14px;
+    font-family: "PT Sans";
+    color: rgb(255, 255, 255);
+    line-height: 1.571;
+    text-align: left;
+    max-width: 200px;
+  }
+  
+  .footer__text_right {
+    text-align: right;
+  }
+  
+  .footer__link {
+    font-size: 14px;
+    font-family: "PT Sans";
+    color: rgb(255, 255, 255);
+    line-height: 1.571;
+    text-align: left;
+    margin-bottom: 5px;
+  }
+
+  .fastlinks {
+      display: flex;
+      flex-direction: column;
+      margin-right: 182px;
   }
   
   
-  
+
